[package]
name = "modsvo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "modsvo"
path = "src/lib.rs"

[dependencies]
derive-deref-rs = "0.1.1"
morton-encoding = "2.0.1"
glam ={version = "0.25.0", features = ["serde"]}
serde = {version = "1.0.195", features = ["derive"] }

[build]
rustdocflags = ["--cfg", "docsrs", "-Z", "unstable-options", "--enable-per-target-ignores"]